--- a/index.html
+++ b/index.html
@@ -1,47 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo - Drag & Drop</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tasks Manager</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
     <div class="container">
-      <h1>My Tasks</h1>
+        <header>
+            <h1>Tasks Manager</h1>
+            <p class="subtitle">Drag tasks to track progress</p>
+        </header>
 
-      <div class="add-task">
-        <form id="task-form">
-          <input
-            type="text"
-            id="task-input"
-            placeholder="What needs to be done?"
-            required
-          />
-          <select id="task-category">
-            <option value="work">Work</option>
-            <option value="personal">Personal</option>
-            <option value="shopping">Shopping</option>
-          </select>
-          <button type="submit" id="submit-btn">Add Task</button>
-        </form>
-      </div>
+        <div class="add-task-card">
+            <h2>Add New Task</h2>
+            <form id="task-form">
+                <div class="form-row">
+                    <input 
+                        type="text" 
+                        id="task-input" 
+                        placeholder="What needs to be done?"
+                        required
+                    >
+                </div>
 
-      <div class="controls">
-        <div class="filter-buttons">
-          <button class="filter-btn active" data-filter="all">All</button>
-          <button class="filter-btn" data-filter="work">Work</button>
-          <button class="filter-btn" data-filter="personal">Personal</button>
-          <button class="filter-btn" data-filter="shopping">Shopping</button>
+                <div class="form-row">
+                    <select id="task-category" required>
+                        <option value="work">Work</option>
+                        <option value="personal">Personal</option>
+                        <option value="shopping">Shopping</option>
+                    </select>
+
+                    <select id="task-priority" required>
+                        <option value="low">Low Priority</option>
+                        <option value="medium">Medium Priority</option>
+                        <option value="high">High Priority</option>
+                    </select>
+
+                    <input type="date" id="task-date">
+                </div>
+
+                <button type="submit" class="btn btn-add">Add Task</button>
+            </form>
         </div>
-        <div class="task-counter"><span id="task-count">0</span> tasks</div>
-      </div>
 
-      <div id="task-list" class="task-list">
-        <p class="empty">No tasks yet. Add one above!</p>
-      </div>
+        <div class="filter-card">
+            <h3>Filter by Category</h3>
+            <div class="filter-buttons">
+                <button class="filter-btn active" data-filter="all">All</button>
+                <button class="filter-btn" data-filter="work">Work</button>
+                <button class="filter-btn" data-filter="personal">Personal</button>
+                <button class="filter-btn" data-filter="shopping">Shopping</button>
+            </div>
+        </div>
+
+        <div class="kanban-board">
+            <div class="kanban-column" data-status="todo">
+                <div class="column-header">
+                    <h3>TO DO</h3>
+                    <span class="task-count" id="todo-count">0</span>
+                </div>
+                <div 
+                    class="task-list" 
+                    id="todo-list"
+                    data-list-type="todo"
+                >
+                    <p class="empty-message">No tasks yet. Add one above!</p>
+                </div>
+            </div>
+
+            <div class="kanban-column" data-status="progress">
+                <div class="column-header">
+                    <h3>IN PROGRESS</h3>
+                    <span class="task-count" id="progress-count">0</span>
+                </div>
+                <div 
+                    class="task-list" 
+                    id="progress-list"
+                    data-list-type="progress"
+                >
+                    <p class="empty-message">Drag tasks here when you start!</p>
+                </div>
+            </div>
+
+            <div class="kanban-column" data-status="done">
+                <div class="column-header">
+                    <h3>DONE</h3>
+                    <span class="task-count" id="done-count">0</span>
+                </div>
+                <div 
+                    class="task-list" 
+                    id="done-list"
+                    data-list-type="done"
+                >
+                    <p class="empty-message">Drag completed tasks here!</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="stats-card">
+            <h3>Statistics</h3>
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <div class="stat-value" id="total-tasks">0</div>
+                    <div class="stat-label">Total Tasks</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-value" id="completed-tasks">0</div>
+                    <div class="stat-label">Completed</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-value" id="pending-tasks">0</div>
+                    <div class="stat-label">Pending</div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
